# datahub-recipes-manager

./: .gitignore  CLAUDE.md  CLIENT_INFO_README.md  README.md  pytest.ini  requirements-dev.txt  requirements-web.txt  requirements.txt  run_web_ui.sh  setup_web_ui.py  test_domain_sync.py  test_entities.json  test_glossary_connection.py  test_mutations.json  test_recipe.py  workflow_analysis.md
config/: config.yaml
datahub-cicd-client/: .coverage  LICENSE  Makefile  README.md  coverage.xml  docker-compose.test.yml  pyproject.toml
datahub-cicd-client/src/datahub_cicd_client/: __init__.py  version.py
datahub-cicd-client/src/datahub_cicd_client/cli/: main.py
datahub-cicd-client/src/datahub_cicd_client/clients/: __init__.py  graphql_connection.py
datahub-cicd-client/src/datahub_cicd_client/core/: __init__.py  base_client.py  connection.py  exceptions.py  mcp_emitter.py
datahub-cicd-client/src/datahub_cicd_client/emitters/: __init__.py  datahub_emitter.py  file_emitter.py
datahub-cicd-client/src/datahub_cicd_client/graphql/fragments/: __init__.py  data_contracts.py  data_products.py  glossary.py  groups.py  ingestion.py  metadata.py  ownership.py  properties.py  users.py
datahub-cicd-client/src/datahub_cicd_client/graphql/mutations/: __init__.py  data_products.py  domains.py  glossary.py  ingestion.py  properties.py  tags.py
datahub-cicd-client/src/datahub_cicd_client/graphql/queries/: __init__.py  analytics.py  assertions.py  data_contracts.py  data_products.py  domains.py  edited_data.py  glossary.py  groups.py  ingestion.py  ownership_types.py  policies.py  properties.py  recipes.py  schema.py  tags.py  tests.py  users.py
datahub-cicd-client/src/datahub_cicd_client/integrations/: __init__.py  datahub_utils.py  docker_utils.py  env_loader.py  github_service.py  recipe_utils.py  scripts_integration.py  template_renderer.py  token_utils.py  urn_utils.py
datahub-cicd-client/src/datahub_cicd_client/mcp_builders/: __init__.py  base.py  data_products.py  tags.py
datahub-cicd-client/src/datahub_cicd_client/models/: __init__.py  base.py  entities.py  metadata.py
datahub-cicd-client/src/datahub_cicd_client/outputs/mcp_output/: __init__.py  assertions.py  base_mcp_output.py  data_contracts.py  data_products.py  domains.py  edited_data.py  glossary.py  metadata_tests.py  tags.py
datahub-cicd-client/src/datahub_cicd_client/outputs/sync/: assertions.py  base_sync_output.py  data_contracts.py  data_products.py  domains.py  edited_data.py  glossary.py  metadata_tests.py  tags.py
datahub-cicd-client/src/datahub_cicd_client/services/: __init__.py  analytics.py  assertions.py  base_service.py  data_contracts.py  data_products.py  data_products_io.py  domains.py  domains_io.py  edited_data.py  glossary.py  glossary_io.py  groups.py  ingestion.py  ownership_types.py  policies.py  properties.py  recipes.py  schema.py  secrets.py  tags.py  tags_enhanced.py  tests.py  users.py
datahub-cicd-client/tests/fixtures/: sample_datasets.json  sample_entities.json
datahub-cicd-client/tests/integration/: test_adapter_ui_validation.py  test_docker_integration.py  test_graphql_queries.py  test_mcp_outputs.py  test_ui_adapter_simple.py  test_ui_integration.py  test_ui_no_none_errors.py  test_ui_no_none_errors_simple.py
datahub-cicd-client/tests/scripts/: ingest_test_data.py
datahub-cicd-client/tests/unit/: test_services.py
docker/: Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml
docs/: Comprehensive_URN_Generation.md  Connection_Monitoring.md  Environment_Variables.md  MCPs.md  Metadata_Migration.md  Troubleshooting.md  URN_Generation.md  cache_busting.md  metadata_extraction.md  workflow_analysis.md
metadata-manager/: README.md
params/: .gitignore  default_params.yaml
policies/: README.md  platform_policy_example.json  policy_documentation.md
scripts/: analyze_workflows.py  auto_document_workflows.sh  compare_metadata.py  conftest.py  create_secret.py  delete_recipe.py  delete_secret.py  domain_manager.py  export_metadata.py  export_policy.py  import_metadata.py  import_policy.py  list_ingestion_sources.py  list_recipes.py  list_secrets.py  manage_policies.py  manage_policy.py  manage_secrets.py  patch_ingestion_source.py  patch_recipe.py  process_metadata_migration.py  process_metadata_tests.py  pull_recipe.py  push_recipe.py  run_ingestion_source.py  run_now.py  run_recipe.py  sync_github_environments.py  test_connection.py  test_graph.py  test_push_and_patch_recipe.py  test_render_recipe.py  test_run_now.py  test_sync_environments.py  update_schedule.py  update_secret.py  update_workflow_descriptions.py  upgrade_db.py  validate_recipe.py
services/: github_service.py
template_manager/: apps.py
test/: fix_imports.py  run_all_tests.sh  setup_postgres_testdata.sh  setup_test_env.sh  test_all_features.sh  test_api_format.sh  test_common.sh  test_deploy.sh  test_domain_scripts.sh  test_manage_policies.sh  (+17 more)
(+542 files in other folders)
